Added extra data to config file and renamed it better.

--- a/newprogram.1
+++ b/newprogram.1
@@ -64,10 +64,10 @@ the option or entered in a quote protected list.
 
 .P
 The configuration dir is \fI$HOME.config/newprogam\fR and the files are
-\fIpaths.cfg\fR and \fIam.mak\fR.
+\fIprdata.cfg\fR and \fIam.mak\fR.
 
 .P
-The file \fIpaths.cfg\fR contains the name of the programs dir, the
+The file \fIprdata.cfg\fR contains the name of the programs dir, the
 program \fBStubs\fR dir and the source library \fBComponents\fR dir. You
 should edit this file to conform to your needs. The other file
 \fIam.mak\fR  forms the basis of the \fIMakefile.am\fR. You should not
