--- a/newprogram.1
+++ b/newprogram.1
@@ -22,7 +22,7 @@ The resulting binary will be \f[I]something\f[] and the manpage
 \f[I]something.1\f[].
 All required \f[I]autotools\f[] files will be generated and any optional
 software dependencies will be entered into the \f[I]Makefile.am\f[].
-Such dependenies, if found within the user designated source file
+Such dependencies, if found within the user designated source file
 sub\-dir will be hard linked into the project dir, or if found within
 the user designated boilerplate dir will be copied there for subsequent
 editing.
